# review_icp

./: Cargo.toml  README.md  canister_ids.json  claude.md  dfx.json  did.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/api/queries/: mod.rs
src/backend/src/api/updates/: mod.rs
src/backend/src/constants/: canisters.rs  mod.rs
src/backend/src/state/: memory.rs  mod.rs  users.rs
src/backend/src/types/: mod.rs  nns.rs  users.rs
src/backend/uuid/: Cargo.toml
src/backend/uuid/src/: errors.rs  lib.rs  rand.rs  time.rs  uuid.rs
src/frontend/: index.html  package.json  tsconfig.json
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/architecture/: ArchitectureFlow.tsx  LayerNode.tsx
src/frontend/src/components/auth/: CreateUserModal.tsx
src/frontend/src/components/dashboard/: AddNeuronModal.tsx  QuickActionCard.tsx  StatCard.tsx
src/frontend/src/components/file-explorer/: FileExplorer.tsx  FileTreeItem.tsx
src/frontend/src/components/layout/: Layout.tsx
src/frontend/src/components/proposals/: ProposalCard.tsx  ProposalTopicCard.tsx
src/frontend/src/components/ui/: LayerInfoPanel.tsx  Navbar.tsx
src/frontend/src/config/: icp-layers.ts  proposal-topics.ts
src/frontend/src/constants/: urls.ts
src/frontend/src/hooks/: actors.ts  auth-context.tsx
src/frontend/src/idl/governance/: idlFactory.did.ts  service.ts
src/frontend/src/pages/: AllProposals.tsx  Following.tsx  Home.tsx  Learn.tsx  LearnTopic.tsx  Profile.tsx  ProposalDetails.tsx  Proposals.tsx  ProposalsLayout.tsx  TopicProposals.tsx
src/frontend/src/services/: proposals.ts
src/frontend/src/types/: index.ts
