[workspace]
members = [
    "src/backend",
    "src/backend/uuid"
]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
ic-stable-structures = "0.7.2"
ic-cdk-macros = "0.18.7"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_bytes = "0.11.17"
sha2 = "0.10.9"
icrc-ledger-types = "0.1.8"
ic-ledger-types = "0.15.0"
ic-cdk-timers = "0.12.2"
hex = "0.4"
num-traits = "0.2"
candid = "0.10.20"
ic-cdk = "0.18.7"
uuid = "1.18.1"
rstest = "0.25.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
