[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-timers = {workspace = true}
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rstest = { workspace = true }
rand = {workspace = true}
rand_chacha = {workspace = true}
uuid = { workspace = true, features = ["serde"] }
chrono = {workspace = true}
serde_json = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
canister_uuid = { path = "./uuid" }
